try rebuild with server failure
